# runway

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  justfile  run.sh  svelte.config.js
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_consolidated_schema.py  049fa99a0ad8_add_event_fields_to_pipeline_history.py  0618239c57ef_add_cascade_delete_to_search_results_.py  1a48d929250c_add_manager_screen_date_to_pipeline_.py  2e9886b55cca_create_pipeline_comments_table.py  (+18 more)
backend/app/: constants.py  database.py  main.py
backend/tests/: conftest.py  test_closed_detection.py  test_companies_api.py  test_constants.py  test_custom_date_api.py  test_dashboard_api.py  test_dashboard_schemas.py  test_database_config.py  test_docker_files.py  test_docker_integration.py  test_funnel_api.py  test_lead_source.py  test_models.py  test_parser_service.py  test_pipeline_api.py  test_pipeline_comments.py  test_pipeline_custom_dates_api.py  test_pipeline_date_fields.py  test_pipeline_event_dates.py  test_pipeline_filtering.py  test_pipeline_history_delete.py  test_pipeline_history_events.py  test_pipeline_move_dates.py  test_pipeline_move_with_dates.py  test_pipeline_schemas.py  test_posting_check_service.py  test_postings_api.py  test_readme_docker_docs.py  test_research_service.py  test_scheduler.py  test_search_api.py  test_search_dedup.py  test_search_service.py  test_ssrf_protection.py  test_stage_date_fields.py  test_static_and_cors.py
(+93 files in other folders)
